Adding Migrations to CycleSales Also adding logic to apply them and seed data on app startup Also adding hints to warranty lookup screen for known numbers

--- a/CycleSales/CycleSales.MVC/Views/Bikes/Details.cshtml
+++ b/CycleSales/CycleSales.MVC/Views/Bikes/Details.cshtml
@@ -65,6 +65,7 @@
                 @Html.Label("Model Number", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     <input class="form-control text-box single-line" id="modelNo" name="modelNo" type="text" value="@Model.ModelNo" />
+                    <span>Hint: TTT200 is a valid model number (avoid additional whitespace)</span>
                 </div>
             </div>
 
@@ -72,6 +73,7 @@
                 @Html.Label("Serial Number", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     <input class="form-control text-box single-line" id="serialNo" name="serialNo" type="text" />
+                    <span>Hint: FR12789 is a valid model number for TTT200 (avoid additional whitespace)</span>
                 </div>
             </div>
 
