Adding bulk price update to MVC app

--- a/StartingSource/CycleSales/CycleSales.MVC/Views/Price/Index.cshtml
+++ b/StartingSource/CycleSales/CycleSales.MVC/Views/Price/Index.cshtml
@@ -22,3 +22,22 @@
         </div>
     </div>
 }
+<hr />
+<h2>Bulk Price Update</h2>
+@using (Html.BeginForm("BulkUpdate", "Price", FormMethod.Post))
+{
+    <div class="form-horizontal">
+        <div class="form-group">
+            @Html.Label("Multiplier", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input class="form-control text-box single-line" id="multiplier" name="multiplier" type="text" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Apply" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
