--- a/StartingSource/CycleSales/CycleSales.MVC/Views/Shared/_Layout.cshtml
+++ b/StartingSource/CycleSales/CycleSales.MVC/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Bikes", "Index", "Bikes")</li>
+                    <li>@Html.ActionLink("Pricing", "Index", "Price")</li>
                     <li>@Html.ActionLink("Warranty Lookup", "WarrantyLookup", "Bikes")</li>
                 </ul>
             </div>
